syntax = "proto3";

package pb;

import "pb/common.proto";
import "pb/store.proto";
service OrderService {
    //提交订单
    rpc OrderSubmit (OrderSubmitModel) returns (OrderSubmitResp);
    //订单支付完成 -->待发货
    rpc PaySuccess (Order) returns (NormalResp);
    //订单发货
    rpc DeliverOrder (Order) returns (NormalResp);
    //订单配送
    rpc DistributeOrder (Order) returns (NormalResp);
    //确认订单（微信端）😳
    rpc ConfirmOrder (Order) returns (NormalResp);
    //申请售后（微信端）😳
    rpc AfterSaleApply (AfterSaleModel) returns (NormalResp);
    //打印订单
    rpc PrintOrder (Order) returns (NormalResp);
    //获取订单详情
    rpc OrderDetail (Order) returns (OrderDetailResp);
    //获取订单列表 用户 云店铺 状态
    rpc OrderList (Order) returns (OrderListResp);
    //关闭订单
    rpc CloseOrder (Order) returns (NormalResp);
    //处理售后订单
    rpc HandleAfterSaleOrder (AfterSaleModel) returns (NormalResp);
    //售后订单处理结果
    rpc AfterSaleOrderHandledResult (AfterSaleModel) returns (Void);
    //商家订单每日销售统计
    rpc StoreDailyGoodsSalesStatistic (Store) returns(Void);
    //用户个人中心-订单状态统计
    rpc UserCenterNecessaryOrderCount (UserCenterOrderCount) returns (UserCenterOrderCount);
}

//订单model
message Order{
    string id = 1;
    int64 order_status = 2;
    int64 total_fee = 3;
    int64 freight  = 4;
    int64 goods_fee = 5;
    int64 withdrawal_fee = 6;
    string user_id = 7;
    string mobile = 8;
    string name = 9;
    string address = 10;
    string remark = 11;
    string store_id = 12;
    string school_id = 13;
    string trade_no = 14;
    int64 order_at = 15;
    int64 pay_at = 16;
    int64 deliver_at = 17;
    int64 print_at =18;
    int64 complete_at = 19;
    int64 close_at = 20;
    string print_staff_id   = 21;
    string deliver_staff_id = 22;
    int64 after_sale_status = 23;
    string after_sale_trade_no = 24;
    int64 refund_fee = 25;
    int64 update_at = 26;
    string pay_channel = 27;
    string after_sale_staff_id = 28;
    int64 after_sale_apply_at = 29;
    int64 after_sale_end_at = 30;
    string groupon_id = 31;
    int64 searchType = 32; //搜索类型 0 用户搜索 1商家搜索
    int64 start_at = 33;
    int64 end_at = 34;
    int64 page = 35;
    int64 size = 36;
    string isbn = 37;
    int64 confirm_at = 38;
    int64 distribute_at = 39;
    string distribute_staff_id = 40;
    string seller_id = 41;

}

//订单详情model
message OrderDetail{
    Order order = 1;
    repeated OrderItem items = 2;
    AfterSaleModel after_sale_detail = 3;
    repeated OrderStaff staffs = 4;
}
//订单详情列表
message OrderDetailResp{
    string code = 1;
    string message = 2;
    OrderDetail data = 3;
}
message OrderListResp{
    string code =1;
    string message =2;
    repeated OrderDetail data = 3;
    int64 total_count =4;
}
//订单提交model
message OrderSubmitModel{
    string user_id = 1;
    string store_id = 2;
    string mobile = 3;
    string name = 4;
    string address = 5;
    string remark = 6;
    string school_id = 7;
    repeated string cart_ids = 8;
}
message OrderSubmitResp{
    string code = 1;
    string message =2;
    Order data = 3;
}
//订单项
message OrderItem{
    string id = 1;
    string goods_id = 2;
    int64 type = 3;
    int64 amount = 4;
    int64 price = 5;
    string book_image = 6;
    string book_isbn = 7;
    string book_title = 8;
    int64 origin_price = 9;

}

message OrderStaff{
    string staff_id = 1;
    string staff_name = 2;
    string staff_work = 3; //print deliver distribute after_sale
}

message AfterSaleModel{
    string trad_no = 1;
    int64 apply_at = 2;
    string reason = 3;
    repeated AfterSaleImage images = 4;
    string staff_id = 5;
    string staff_name = 6;
    string order_id = 7;
    int64 refund_fee = 8;
    string user_id = 9;
}
message AfterSaleImage{
    string url = 1;
}

message UserCenterOrderCount{
    int64 unpaid_order_num = 1;
    int64 undelivered_order_num = 2;
    int64 uncompleted_order_num = 3;
    string user_id = 4;
    string store_id = 5;
}
